--- a/app/views/attempts/show.html.erb
+++ b/app/views/attempts/show.html.erb
@@ -4,16 +4,16 @@
     <p><small><%= @attempt.survey.description %></small></p>
   </h2>
   <ol class="questions">
-    <% @attempt.answers.each do |answer| %>
+    <% @attempt.survey.questions.each do |question| %>
       <li class="question-wrapper">
-        <p class="question"> <%= answer.question.text %> </p>
+        <p class="question"> <%= question.text %> </p>
         <ul class="options list-unstyled">
-          <% answer.question.options.each do |option| %>
+          <% question.options.each do |option| %>
             <li class="radio">
               <label>
-                <%= radio_button_tag '', '', the_chosen_one?(answer, option), disabled: true %>
-                <% color = get_color_of_option(answer, option) %>
-                <span class="<%= color %> <%= the_chosen_one?(answer, option) %>"> <%= option.text %> <%= get_weight(option) %> </span>
+                <%= check_box_tag '', '', the_chosen_one?(@attempt, option), disabled: true %>
+                <% color = get_color_of_option(@attempt, option) %>
+                <span class="<%= color %> <%= the_chosen_one?(@attempt, option) %>"> <%= option.text %> <%= get_weight(option) %> </span>
               </label>
               <p class="answers-number"> <%= number_of_people_who_also_answered(option.id) %> </p>
             </li>
