--- a/app/views/attempts/_form.html.erb
+++ b/app/views/attempts/_form.html.erb
@@ -10,7 +10,7 @@
         <% question = answer_fields.object.question %>
         <p class="question"><%= question.text %></p>
         <ul class="options list-unstyled">
-          <%= collection_check_boxes('survey_attempt[answers_attributes]', question.id, question.options, :id, :text) do |b| %>
+          <%= collection_check_boxes('survey_attempt[answers_attributes]', question.id, question.options.shuffle, :id, :text) do |b| %>
             <li class="radio">
               <%= b.label { b.check_box + b.text } %>
             </li>
